[package]
name = "max521x"
version = "0.1.0"
edition = "2018"

authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust Embedded HAL driver for the Maxim MAX5214 and MAX5216"
repository = "https://github.com/mendelt/max521x"
categories = ["no-std", "embedded"]
keywords = ["dac", "spi"]
readme = "README.md"

[badges]
travis-ci = { repository = "mendelt/max521x" }

[dependencies]
embedded-hal = "0.2.3"

[dev-dependencies]
embedded-hal-mock = "0.7.1"
